# lingxiaoyao-ai-academy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: release-desktop.yml
apps/desktop/: package.json
apps/desktop/src/: auth.ts  updater.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/miniprogram/: package.json  project.config.json  tsconfig.json
apps/miniprogram/config/: index.ts
apps/miniprogram/src/: app.config.ts  app.scss  app.tsx
apps/miniprogram/src/services/: articles.ts  auth.ts  comments.ts  courses.ts  orders.ts  progress.ts  search.ts
apps/miniprogram/src/utils/: request.ts
apps/web/: components.json  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
apps/web/app/about/: page.tsx
apps/web/app/articles/: page.tsx
apps/web/components/: comment-section-wrapper.tsx  course-sidebar.tsx  search-command.tsx  site-footer.tsx  site-header.tsx  toc.tsx
apps/web/lib/: docs-utils.ts  rate-limit.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/scripts/: desktop-prepare.mjs
scripts/: build-search-index.ts  migrate-content-to-db.ts  promote-admin.ts  update-advanced-tutorials.ts  update-beginner-tutorials.ts  update-intermediate-tutorials.ts
(+139 files in other folders)
